--- a/rust-atomics/cbindgen.toml
+++ b/rust-atomics/cbindgen.toml
@@ -6,3 +6,4 @@ style = "type"
 "PlainCounter" = "plain_counter_t"
 "AtomicCounter" = "atomic_counter_t"
 "ConcurrentHashMap" = "concurrent_hash_map_t"
+"FixedSizeObjectPool" = "fixed_size_object_pool_t"
