--- a/rust-atomics/cbindgen.toml
+++ b/rust-atomics/cbindgen.toml
@@ -7,3 +7,4 @@ style = "type"
 "AtomicCounter" = "atomic_counter_t"
 "ConcurrentHashMap" = "concurrent_hash_map_t"
 "FixedSizeObjectPool" = "fixed_size_object_pool_t"
+"Queue" = "queue_t"
