--- a/rust-atomics/cbindgen.toml
+++ b/rust-atomics/cbindgen.toml
@@ -8,3 +8,6 @@ style = "type"
 "ConcurrentHashMap" = "concurrent_hash_map_t"
 "FixedSizeObjectPool" = "fixed_size_object_pool_t"
 "Queue" = "queue_t"
+
+[export]
+include = ["QueuePushArg"]
