--- a/rust-atomics/cbindgen.toml
+++ b/rust-atomics/cbindgen.toml
@@ -8,6 +8,7 @@ style = "type"
 "ConcurrentHashMap" = "concurrent_hash_map_t"
 "FixedSizeObjectPool" = "fixed_size_object_pool_t"
 "Queue" = "queue_t"
+"SlowObject" = "slow_object_t"
 
 [export]
 include = ["QueuePushArg"]
